[package]
name = "lpl-token-auth-rules"
version = "1.2.0"
description = "MPL Token Authorization Rules that can be used to restrict common token operations"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/lpl-token-auth-rules.git"
license-file = "../LICENSE"
edition = "2021"
readme = "../README.md"
keywords = ["nft", "metaplex", "solana", "blockchain"]

[dependencies]
safecoin-program = {path = "../../Safecoin/sdk/program", version = "1.15.3"}
shank = "0.0.11"
borsh = "0.9.3"
thiserror = "1.0"
num-derive = "0.3.3"
num-traits = "0.2"
serde = { version = "1.0.149", features = ["derive"]}
serde_with = { version = "1.14.0", optional = true }
rmp-serde = "1.1.1"
lpl-token-metadata-context-derive = { version = "0.2.1", path = "../../ledamint-program-library/token-metadata/macro"}
safe-zk-token-sdk = {path = "../../Safecoin/zk-token-sdk", version = "1.15.3"}

[features]
no-entrypoint = []
test-bpf = []
serde-with-feature = ["serde_with"]

[dev-dependencies]
assert_matches = "1.5.0"
safecoin-program-test = {path = "../../Safecoin/program-test", version = "1.15.3"}
safecoin-sdk = {path = "../../Safecoin/sdk", version = "1.15.3"}
safecoin-logger = {path = "../../Safecoin/logger", version = "1.15.3"}
safe-token = { version = "3.5.0", features = [ "no-entrypoint" ] }
serde_json = "1.0.87"
safe-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
